[tool.poetry]
authors = ["Daven Quinn <dev@davenquinn.com>"]
description = "A schema-based API to enable geoscience data interchange"
license = "MIT"
name = "digitalcrust.weaver"
packages = [{include = "digitalcrust"}]
readme = "README.md"
version = "0.1.0"

# Command-line scripts
[tool.poetry.scripts]
weaver = "digitalcrust.weaver.cli:app"

[tool.poetry.dependencies]
geojson-pydantic = "^0.4.3"
"macrostrat.database" = "^1.0.2"
pydantic = "^1.10.2"
python = "^3.10"
python-dotenv = "^0.21.0"
typer = "^0.6.1"
rich = "^12.6.0"
requests = "^2.30.0"
pandas = "^2.0.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
ipython = "^8.13.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
